--- a/PracticeProject1/package.json
+++ b/PracticeProject1/package.json
@@ -3,12 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
-  "author": "",
+  "keywords": [
+    "typescript"
+  ],
+  "author": "Siddharth Gosavi",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.2",
+    "web-dev-server": "^3.0.27",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
